objects/vAuto__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>This setting will hold anything specific to vAuto BU.</description>
    <fields>
        <fullName>Conquest_Advanced_Setup_Call_Assignee__c</fullName>
        <defaultValue>&quot;jdougherty@vauto.com&quot;</defaultValue>
        <description>User with this email will be assignee to all &quot;Advanced Setup Call&quot; tasks created for conquest project.</description>
        <inlineHelpText>User with this email will be assignee to all &quot;Advanced Setup Call&quot; tasks created for conquest project.</inlineHelpText>
        <label>Conquest Advanced Setup Call Assignee</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Conquest_Franchise_Setup_Task_Assignee__c</fullName>
        <defaultValue>&quot;jdougherty@vauto.com&quot;</defaultValue>
        <description>User with email be assignee for all &quot;Conquest Franchise Setup&quot; tasks created for conquest project.</description>
        <inlineHelpText>User with email be assignee for all &quot;Conquest Franchise Setup&quot; tasks created for conquest project.</inlineHelpText>
        <label>Conquest Franchise Setup Task Assignee</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Conquest_Monthly_Billing_EL_Assignee__c</fullName>
        <defaultValue>&quot;elliott.lerner@vauto.com&quot;</defaultValue>
        <description>User with this email will be the Assignee of Conquest Monthly Billing Task (EL) on conquest project.</description>
        <inlineHelpText>User with this email will be the Assignee of Conquest Monthly Billing Task (EL) on conquest project.</inlineHelpText>
        <label>Conquest Monthly Billing (EL) Assignee</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Conquest_Monthly_Billing_JT_Assingee__c</fullName>
        <defaultValue>&quot;jill.tyson@vauto.com&quot;</defaultValue>
        <description>User with this email will be the Asignee for Conquest Monthly Billing Task (JT) task on conquest project.</description>
        <inlineHelpText>User with this email will be the Asignee for Conquest Monthly Billing Task (JT) task on conquest project.</inlineHelpText>
        <label>Conquest Monthly Billing (JT) Assingee</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Conquest_Monthly_Billing_MM_Assignee__c</fullName>
        <defaultValue>&quot;mmorrissey@vauto.com.fulltest&quot;</defaultValue>
        <description>User with this email will be the Assignee of Conquest Monthly Billing Task (MM) on conquest project.</description>
        <inlineHelpText>User with this email will be the Assignee of Conquest Monthly Billing Task (MM) on conquest project.</inlineHelpText>
        <label>Conquest Monthly Billing (MM) Assignee</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Conquest_Verification_C_Task_Assignee__c</fullName>
        <defaultValue>&quot;mwheet@vauto.com&quot;</defaultValue>
        <description>User with email be assignee for all &quot;Conquest Verification C&quot; tasks created for conquest project.</description>
        <inlineHelpText>User with email be assignee for all &quot;Conquest Verification C&quot; tasks created for conquest project.</inlineHelpText>
        <label>Conquest Verification C - Task Assignee</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Default_Project_Owner__c</fullName>
        <description>This filed holds the email of the user who will be Project Owner if there are no specific person Identified.</description>
        <inlineHelpText>This filed holds the email of the user who will be Project Owner if there are no specific person Identified.</inlineHelpText>
        <label>Default Project Owner</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Integration_C_Task_Assignee__c</fullName>
        <defaultValue>&quot;mwheet@vauto.com&quot;</defaultValue>
        <description>The user with this email address will be used as Assignee when Conquest - Integration C tasks are created.</description>
        <inlineHelpText>The user with this email address will be used as Assignee when Conquest - Integration C tasks are created.</inlineHelpText>
        <label>Integration C Task Assignee</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Removal_Project_Owner__c</fullName>
        <description>This wil hold the persons emails who would be the Project owner for project related to Opportunit Type Removal</description>
        <label>Removal Project Owner</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Training_1_Conquest_Task_Assignee__c</fullName>
        <defaultValue>&quot;jdougherty@vauto.com&quot;</defaultValue>
        <description>The user with this email will be the Assignee for all &quot;Training 1 Conquest &quot; Tasks on conquest project.</description>
        <inlineHelpText>The user with this email will be the Assignee for all &quot;Training 1 Conquest &quot; Tasks on conquest project.</inlineHelpText>
        <label>Training 1 Conquest Task Assignee</label>
        <type>Email</type>
    </fields>
    <label>vAuto</label>
</CustomObject>